2006-07-25  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtkmodule.c (init_gtk): 
	* pangomodule.c (initpango): Check the required
	PyGObject version in runtime too.

2006-07-24  John Finlay  <finlay@moeraki.com>

	* atk.defs (atk_role_get_localized_name, atk_role_get_name): Define as
	functions.

	* pango.defs (pango_script_get_sample_language): Define as function.

	* gtk/gtkunixprint.defs (details_acquired) 
	(gtk_print_capabilities_get_type, status_changed): Add.

	* gtk/gtk-base-types.defs (Editable): Add prerequisite.

	* pangocairo.override (*_get_type): ignore-glob
	(pango_cairo_update_context, pango_cairo_create_layout)
	(pango_cairo_update_layout, pango_cairo_show_glyph_string)
	(pango_cairo_show_layout_line, pango_cairo_show_layout)
	(pango_cairo_glyph_string_path, pango_cairo_layout_line_path)
	(pango_cairo_layout_path): ignore.

	* pangocairo.defs (pango_cairo_update_context)
	(pango_cairo_context_set_font_options)
	(pango_cairo_context_get_font_options)
	(pango_cairo_context_set_resolution)
	(pango_cairo_context_get_resolution, pango_cairo_create_layout)
	(pango_cairo_update_layout, pango_cairo_show_glyph_string)
	(pango_cairo_show_layout_line, pango_cairo_show_layout)
	(pango_cairo_glyph_string_path, pango_cairo_layout_line_path)
	(pango_cairo_layout_path): Add.

	* pango.override (*_get_type, *_ref, *_unref, *_free): ignore-glob
	(pango_default_break): ignore

	* pango.defs (pango_attr_shape_new_with_data, pango_default_break) 
	(pango_context_get_font_map, pango_context_set_matrix) 
	(pango_context_get_matrix, pango_itemize_with_base_dir) 
	(pango_coverage_new, pango_glyph_item_split, pango_glyph_item_free) 
	(pango_glyph_item_apply_attrs, pango_glyph_item_letter_space) 
	(pango_item_get_type, pango_item_new, pango_item_copy)
	(pango_item_free, pango_item_split, pango_script_for_unichar) 
	(pango_script_iter_new, pango_script_iter_get_range)
	(pango_script_iter_next, pango_script_iter_free) 