@@ -1053,15 +1053,84 @@ arg_error:
 }
 %%
 override gtk_main noargs
+
+  /* This code (pygtk main watch) was copied with minor changes from
+   * pygobject/gobject/pygmainloop.c */
+static gboolean
+pygtk_main_watch_prepare(GSource *source,
+			 int     *timeout)
+{
+    /* Python only invokes signal handlers from the main thread,
+     * so if a thread other than the main thread receives the signal
+     * from the kernel, PyErr_CheckSignals() from that thread will
+     * do nothing. So, we need to time out and check for signals
+     * regularily too.
+     * Also, on Windows g_poll() won't be interrupted by a signal
+     * (AFAIK), so we need the timeout there too.
+     */
+#ifndef PLATFORM_WIN32
+    if (pyg_threads_enabled)
+#endif
+	*timeout = 100;
+
+    return FALSE;
+}
+
+static gboolean
+pygtk_main_watch_check(GSource *source)
+{
+    PyGILState_STATE state;
+
+    state = pyg_gil_state_ensure();
+
+    if (PyErr_CheckSignals() == -1 && gtk_main_level() > 0) {
+	PyErr_SetNone(PyExc_KeyboardInterrupt);
+	gtk_main_quit();
+    }
+
+    pyg_gil_state_release(state);
+
+    return FALSE;
+}
+
+static gboolean
+pygtk_main_watch_dispatch(GSource    *source,
+			  GSourceFunc callback,
+			  gpointer    user_data)
+{
+    /* We should never be dispatched */
+    g_assert_not_reached();
+    return TRUE;
+}
+
+static GSourceFuncs pygtk_main_watch_funcs =
+{
+    pygtk_main_watch_prepare,
+    pygtk_main_watch_check,
+    pygtk_main_watch_dispatch,
+    NULL
+};
+
+static GSource *
+pygtk_main_watch_new(void)
+{
+    return g_source_new(&pygtk_main_watch_funcs, sizeof(GSource));
+}
+
+
 static PyObject *
 _wrap_gtk_main(PyObject *self)
 {
+    GSource *main_watch;
     // Call enable_threads again to ensure that the thread state is recorded
-    if (_PyGObject_API->threads_enabled)
+    if (pyg_threads_enabled)
 	pyg_enable_threads();
 
+    main_watch = pygtk_main_watch_new();
     pyg_begin_allow_threads;
+    g_source_attach(main_watch, NULL);
     gtk_main();
+    g_source_destroy(main_watch);
     pyg_end_allow_threads;
     if (PyErr_Occurred())
         return NULL;
