@@ -1,3 +1,12 @@
+2006-07-27  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
+
+	* gtk/gtk.override (_wrap_gtk_main): Copy paste some code from
+	pygobject/gobject/pygmainloop written by Mark McLoughlin, to check
+	for signals inside the gtk main loop.
+	
+	* gtk/gtkmodule.c (init_gtk): Remove the timer; no longer needed.
+	Fixes bug #348937: 100ms timeouts in pygtk.
+
 2006-07-25  Johan Dahlin  <jdahlin@async.com.br>
 
 	* gtk/gtkmodule.c (init_gtk): 
